[metadata]
name = bmds_server
version = 0.8
description = A service designed to run the USEPA benchmark dose modeling software
long_description = file: README.rst
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
* =
    *.css
    *.html
    *.js

[options.entry_points]
console_scripts =
    manage.py = bmds_server:manage
    manage = bmds_server:manage
    bmds = bmds_server:manage

[flake8]
exclude = docs
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,N801,N802,N805,N806

[tool:pytest]
norecursedirs = .git .tox docs static templates
addopts = --ds=main.settings.testing --reuse-db --nomigrations
