[metadata]
name = bmds_server
version = 23.1.rc1
description = A service designed to run the USEPA benchmark dose modeling software
long_description = file: README.rst
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
* =
    *.css
    *.html
    *.js

[options.entry_points]
console_scripts =
    manage.py = bmds_server:manage
    manage = bmds_server:manage
    bmds = bmds_server:manage

[flake8]
exclude = docs,frontend,scripts,venv
max-line-length = 100
ignore = E203,E501,W503

[tool:pytest]
norecursedirs = .git .tox docs static templates
addopts = --ds=main.settings.testing --reuse-db --nomigrations
