[metadata]
name = bmds_server
version = 2023.12a1
description = A service designed to run the USEPA benchmark dose modeling software
long_description = file: README.rst
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
requires_python = ">=3.11"
install_requires =
    Django~=4.2.7
    django-webpack-loader~=2.0.1
    djangorestframework~=3.14.0
    uritemplate~=4.1.1
    PyYAML~=6.0.1
    django-reversion~=5.0.6
    celery~=5.3.4
    billiard~=4.1.0
    kombu~=5.3.2
    plotly~=5.18.0
    redis~=5.0.1
    django-anymail~=10.2
    django-redis~=5.4.0
    textual~=0.45.1
    whitenoise~=6.6.0

[options.package_data]
* =
    *.css
    *.html
    *.js

[options.entry_points]
console_scripts =
    manage.py = bmds_server:manage
    manage = bmds_server:manage
    bmds = bmds_server.desktop.cli:main
    bmdsdesktop = bmds_server.desktop.cli:main

[tool:pytest]
norecursedirs = .git .tox docs static templates
addopts = --ds=main.settings.testing --reuse-db --nomigrations
